--- a/trunk/package/win32/doclib/history.txt
+++ b/trunk/package/win32/doclib/history.txt
@@ -5,6 +5,70 @@ Hot Soup Processor ver3.2                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2009/04/10 3.2b2
+
+	OpenHSP 2009/03/09までの更新を反映しています。
+	主な修正点は以下の通りです。(詳細は、OpenHSP Trac参照)
+
+		BT#204: 「#func onexit で定義した関数が実行されない場合がある 」に対処(fujidig)
+		3.2beta1で、HSP3仕様のプラグイン使用時に開放済みのメモリをアクセスしてしまう問題を修正(sharkpp)
+		拡張プラグイン・dllの解放をプログラムの終了処理中に行なうように変更(naznyark)
+		logmes命令でバッファオーバーフローの可能性があったのを修正(fujidig)
+		非ツールウィンドウとして作成後にツールウィンドウとして再初期化したウィンドウが、タスクバーにボタンを残す不具合を修正(naznyark)
+		非常に長いモジュール名を指定するとエラーが発生する不具合を修正(fujidig)
+		#runtime で #cmpopt の設定がリセットされるバグを修正(fujidig)
+マクロ展開で、「macro 1,」のように書いた場合最後のパラメーターを省略と見なされなかった不具合を修正(fujidig)
+		複数行コメント内に # で始まる行があると行番号がずれる不具合を修正(fujidig)
+		プリプロセッサ命令の行末の'\'の前にマルチバイト文字があったとき動作がおかしいことがあるのを修正(fujidig)
+		一部のプリプロセッサ命令で \ を使って行を継続したときに行番号がずれる不具合を修正(fujidig)
+		ラベル型変数の初期値を使って、gotoなどの命令を実行するとエラーになるように修正(fujidig)
+		memcpy, memset でオフセットに負数を指定したときエラーにするように変更(fujidig)
+		hspextプラグインで、シリアルポートの10番目(COM10)以上を指定可能に修正(sharkpp)
+		BT#208: hspextプラグインのpipeput,pipegetでフリーズ、エラーが発生する不具合を修正(sharkpp)
+		付属ドキュメントのリンク切れ、不具合を修正(sharkpp,eller)
+		スクリプトエディタ: ラベル一覧に、定義済みの命令・関数を表示する機能を実装(sharkpp)
+		スクリプトエディタ: スクリプトエディタの印刷機能の更新、修正(sharkpp)
+		スクリプトエディタ: スクロールバーのON/OFFが効いていないのを修正(fujidig)
+		wmv形式ファイルのウィンドウ内再生に対応
+		double型の\(剰余)演算に対応
+		hspcvプラグインのcvfacedetect命令でメモリリークが発生する不具合	を修正
+		hgimgプラグインの互換性を向上
+		スクリプトエディタの「HSP拡張マクロを使用する」項目を廃止
+		BT#217: #moduleのモジュール名直後に空白を記述するとエラーになる不具合を修正
+		文字列の中から指定した文字だけを取り除くstrtrim関数を追加
+		指定した文字列で分割された要素を変数に代入するsplit命令を追加
+		objprm命令等の配置オブジェクトIDのチェックを厳格にした
+		配置オブジェクトの挙動設定を行なうobjenable、objskip命令を追加
+		入力ボックスにキーボードフォーカスが合った時は、デフォルトで項目を全選択するように修正
+		グラデーションによる矩形塗りつぶしを行なうgradf命令を追加
+		gsquare命令にグラデーション塗りつぶしオプションを追加
+		画像によるカスタムボタンを設定するobjimage命令を追加
+		ginfo関数に未使用のウインドゥIDを返す機能を追加
+		スクリプトエディタからの実行時に、ツールフォルダにhsp3フォルダが存在するとエラーが出る問題を修正
+
+	2008/06/05 3.2b1
+
+	OpenHSP 2008/06/04までの更新を反映しています。
+	主な修正点は以下の通りです。(詳細は、OpenHSP Trac参照)
+
+		サイズ固定ツールウィンドウに非描画領域がある不具合を修正。(naznyark)
+		onxxx系命令でラベル型変数を指定するとエラーになる不具合を修正。(naznyark)
+		BT#190: return命令へ長い文字列を指定するとアクセス違反が起こる不具合を修正。(naznyark)
+		BT#113: dimtypeでモジュール型変数が不完全な状態で作成される不具合を修正。(naznyark)
+		strf関数で複数の引数を利用可能に修正。(fujidig)
+		strmid関数でメモリ領域外にアクセスしないように修正。(fujidig)
+		return命令で大きな実数を指定するとエラーになる不具合を修正。(fujidig)
+		文字コード変換モジュールencode.asを追加。(sharkpp)
+		llmod3モジュールを追加。(sharkpp)
+		#defineのマクロ展開でバッファオーバーフローをチェックするように修正。(fujidig)
+		BT#083: hspdef.asでデバッグ命令が取り消せていない不具合を修正。(fujidig)
+		BT#198: 0x80以上の文字定数で負数が返ってくる不具合を修正。
+		パラメーター取得処理の見直しにより全体の動作を高速化。(onitama)
+		スタックレベルを最大で256まで拡張した。(onitama)
+		OpenHSPのライセンス文書(HSPLicense.txt)を修正。(onitama)
+		#regcmdで登録されたHPIのDLLハンドルを開放するように修正。(fujidig)
+		マルチスレッド版ランタイム、hsp3mtを追加。(onitama)
+
 	2007/7/29 3.1
 
 		RC1のrandomize命令で引数を省略した時に正しく初期化されなかった不具合を修正。(HSPBT#168)
