--- a/trunk/package/win32/doclib/history.txt
+++ b/trunk/package/win32/doclib/history.txt
@@ -5,6 +5,20 @@ Hot Soup Processor ver3.2                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2009/05/22 3.2b3
+
+	CEL関連命令(celload、celdiv、celput)を追加
+	ver3.2β1～β2で終了時にエラーが起こることがあった不具合を修正
+	ver3.2β1～β2でバージョン番号(hspver)がおかしかった不具合を修正
+	HGIMG3ランタイムで別なプラグインを使用した際の解放が正しく行なわれなかった不具合を修正
+	HGIMG3で、hgbyeによる解放後に再度hginiによる初期化を失敗する不具合を修正
+	ラベル型の配列変数を作成するためのldimマクロを追加
+	ラベル型の変数を初期化するためのnewlab命令を追加
+	マクロ定義時に記述された範囲コメントで起こる不具合を修正(fujidig)
+	hsp3clのinput命令でp3=2のときCRの次のLFを読み飛ばしていないのを修正(fujidig)
+	内部メモリブロック確保アルゴリズムの改善(fujidig)
+	dialog命令によるファイル選択時、フィルタでの複数指定を追加。(Sharkpp)
+
 	2009/04/10 3.2b2
 
 	OpenHSP 2009/03/09までの更新を反映しています。
