ドキュメントの更新と追加 HSPSDKにhspat,ahtmanのソースを追加

--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,6 +5,34 @@ Hot Soup Processor ver3.2                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2009/07/27 3.2rc1
+
+	HSP周辺ツールとしてHSPアシスタントを追加。
+	サンプルビューアーを廃止し、HSPアシスタントの機能の一部に統合
+	プリプロセッサ命令、modcfuncを追加。
+	拡張プラグインHGIMG3の機能追加と不具合をいくつか修正(詳細はhgimg3.txtを参照してください)。
+
+	2009/07/13 3.2b4
+
+	OpenHSP 2009/07/09までの更新を反映しています。
+	主な修正点は以下の通りです。(詳細は、OpenHSP Trac参照)
+
+	物理エンジンとして新規プラグインOBAQ.DLLを追加
+	hspmath.asのM_PI,rad2deg,deg2rad,pow(powf)が標準マクロとして定義されるように修正ラベルリテラルを式の中で使えるように修正(fujidig)
+	「=」を省略した複合代入「v+(1)」の書式を許容するように修正(fujidig)
+	後ろで定義されている関数を呼び出せるように修正(fujidig)
+	HSPINET,HSPDAプラグインを更新(onitama/fujidig)
+	BT#167: 「10*10/-a」のようなマイナス演算子の記述でエラーになる不具合を修正(fujidig)
+	BT#182: HSPCVのグレースケールバッファでcvthresholdを実行すると失敗する不具合を修正
+	BT#186: Peas用のif.aht及び、aht.txtのサンプルを修正
+	BT#209: 実行用ランタイムファイルを見つけられない事がある不具合を修正(fujidig)
+	BT#220: objprmによりlistbox,comboxオブジェクトの変更時に変数内容が反映されない不具合を修正
+	BT#222: strfの書式で"%I64"を使えるように修正
+	BT#223: strfの書式に関数を入れた時の動作を修正
+	ドットを使った配列の要素指定を修正(fujidig)
+	かんたん入力の文字列入力でクリップボードの内容が上書きされないように修正
+	β3版でパレットモードの初期化がエラーになる不具合があったのを修正
+
 	2009/05/22 3.2b3
 
 	CEL関連命令(celload、celdiv、celput)を追加
