--- a/trunk/package/win32/doclib/history.txt
+++ b/trunk/package/win32/doclib/history.txt
@@ -5,6 +5,10 @@ Hot Soup Processor ver3.2                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2009/08/01 3.2
+
+	hspda.dllのsortvalで昇順・降順の指定が反映されていなかった不具合を修正
+
 	2009/07/27 3.2rc1
 
 	HSP周辺ツールとしてHSPアシスタントを追加。
