--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -8,6 +8,7 @@ Hot Soup Processor ver3.2                           HSP : Hot Soup Processor
 	2009/08/01 3.2
 
 	hspda.dllのsortvalで昇順・降順の指定が反映されていなかった不具合を修正
+	スクリプトエディタのラベル一覧に、一部のラベルが検出されなかった不具合を修正
 
 	2009/07/27 3.2rc1
 
