--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -9,6 +9,7 @@ Hot Soup Processor ver3.2                           HSP : Hot Soup Processor
 
 	hspda.dllのsortvalで昇順・降順の指定が反映されていなかった不具合を修正
 	スクリプトエディタのラベル一覧に、一部のラベルが検出されなかった不具合を修正
+	かんたん入力時の文字列転送がWindowsXPより古い環境で失敗する不具合を修正
 
 	2009/07/27 3.2rc1
 
