--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,11 +5,23 @@ Hot Soup Processor ver3.2                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2009/10/19 3.2a
+
+	Windows Vista,及び7の64bit(x64)版においてHSP実行時のウインドゥを閉じることができなくなる(end命令による終了を除く)不具合を修正
+
+	HSP3.2リリース版に対して終了時の動作に修正を加えただけで、
+	それ以外の動作は一切変更していません。
+	特に変更を意識することなく、HSP3.2と同様にお使い頂けます。
+	変更を区別するために、ここではバージョンをHSP3.2aとしていますが、
+	表示上はHSP3.2のままになっています。
+	ただし内部のマイナーバージョンコードは加算されています。
+	HSP3.2リリースは、システム変数hspverで取得できる値が12806でしたが、
+	HSP3.2aでは12807になっています。
+
 	2009/08/01 3.2
 
 	hspda.dllのsortvalで昇順・降順の指定が反映されていなかった不具合を修正
 	スクリプトエディタのラベル一覧に、一部のラベルが検出されなかった不具合を修正
-	かんたん入力時の文字列転送がWindowsXPより古い環境で失敗する不具合を修正
 
 	2009/07/27 3.2rc1
 
