--- a/trunk/package/win32/doclib/history.txt
+++ b/trunk/package/win32/doclib/history.txt
@@ -8,15 +8,9 @@ Hot Soup Processor ver3.2                           HSP : Hot Soup Processor
 	2009/10/19 3.2a
 
 	Windows Vista,及び7の64bit(x64)版においてHSP実行時のウインドゥを閉じることができなくなる(end命令による終了を除く)不具合を修正
-
-	HSP3.2リリース版に対して終了時の動作に修正を加えただけで、
-	それ以外の動作は一切変更していません。
-	特に変更を意識することなく、HSP3.2と同様にお使い頂けます。
-	変更を区別するために、ここではバージョンをHSP3.2aとしていますが、
-	表示上はHSP3.2のままになっています。
-	ただし内部のマイナーバージョンコードは加算されています。
-	HSP3.2リリースは、システム変数hspverで取得できる値が12806でしたが、
-	HSP3.2aでは12807になっています。
+	HGIMG3ランタイム版においてCPU稼働率が高くなることがある不具合を修正
+	サンプルスクリプト、ヘルプの微修正
+	バージョン表記は3.0のままですが、マイナーバージョンコードは加算しています(hspver=12807)
 
 	2009/08/01 3.2
 
