BT#230の修正を反映

--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -9,13 +9,14 @@ Hot Soup Processor ver3.21                          HSP : Hot Soup Processor
 
 	HGIMG3で発生するいくつかの不具合を修正(hgimg3.txt参照)。
 	obaqプラグインサンプル、及びツールを追加。
+	BT#230: #defineプリプロセッサの引数によりクラッシュすることがある不具合を修正(lagwn)
 
 	2009/10/19 3.2a
 
 	Windows Vista,及び7の64bit(x64)版においてHSP実行時のウインドゥを閉じることができなくなる(end命令による終了を除く)不具合を修正
 	HGIMG3ランタイム版においてCPU稼働率が高くなることがある不具合を修正
 	サンプルスクリプト、ヘルプの微修正
-	バージョン表記は3.0のままですが、マイナーバージョンコードは加算しています(hspver=12807)
+	バージョン表記は3.2のままですが、マイナーバージョンコードは加算しています(hspver=12807)
 
 	2009/08/01 3.2
 
