hspinetヘルプを更新 HGIMG3ヘルプ、ドキュメントを更新 BASE64、RC4、メール送信サンプルを追加

--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,11 +5,15 @@ Hot Soup Processor ver3.21                          HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2010/01/28 3.21
+	2010/01/29 3.21
 
-	HGIMG3で発生するいくつかの不具合を修正(hgimg3.txt参照)。
+	HGIMG3で発生するいくつかの不具合修正と機能追加(hgimg3.txt参照)。
 	obaqプラグインサンプル、及びツールを追加。
+	hspinetプラグインにRC4/BASE64サポートを追加。
+	hspinetプラグインサンプルにメール送信スクリプトを追加。
+	BT#228: HSPアシスタントを最小化状態で終了させると次回起動時に表示されない不具合を修正
 	BT#230: #defineプリプロセッサの引数によりクラッシュすることがある不具合を修正(lagwn)
+	ドキュメントでのバージョン表記は3.2のものも含まれていますが、マイナーバージョンコードは加算しています(hspver=12808)
 
 	2009/10/19 3.2a
 
