--- a/trunk/package/win32/doclib/history.txt
+++ b/trunk/package/win32/doclib/history.txt
@@ -5,13 +5,17 @@ Hot Soup Processor ver3.21                          HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2010/02/26 3.21RC3
+	2010/03/31 3.21
+
+	一部のOSでoggストリームの再生直後にdmmstatで再生時間を取るとフリーズする不具合を修正
+	3.21RC1から、HSP3及び標準的なランタイムに変更はありません。
+	(マイナーバージョンコードも変更していません。)
+
+	2010/03/16 3.21RC3
 
 	K-Kさん製作のhspusbioプラグイン及びモジュールを同梱。
 	HGIMG3に関する不具合のいくつかを修正(hgimg3.txt参照)。
 	hspoggプラグインの動作が不安定なためhsp3.2同梱版に戻しました。
-
-	RC1から、HSP3及び標準的なランタイムに変更はありません。マイナーバージョンコードも変更していません。
 
 	2010/02/18 3.21RC2
 
