--- a/trunk/package/win32/doclib/history.txt
+++ b/trunk/package/win32/doclib/history.txt
@@ -1,9 +1,15 @@
 ------------------------------------------------------------------------------
-Hot Soup Processor ver3.21                          HSP : Hot Soup Processor  
+Hot Soup Processor ver3.21a                         HSP : Hot Soup Processor  
 更新履歴                              copyright 1997-2010 (c) onion software  
 ------------------------------------------------------------------------------
 
 ・hsp3関連 更新履歴
+
+	2010/04/30 3.21a
+
+	HGIMG3に関する不具合のいくつかを修正(hgimg3.txt参照)。
+	d3moduleヘルプファイルが重複していたものを修正。
+	ドキュメント、リファレンスの細かい修正。
 
 	2010/03/31 3.21
 
