--- a/trunk/package/win32/doclib/history.txt
+++ b/trunk/package/win32/doclib/history.txt
@@ -1,9 +1,29 @@
 ------------------------------------------------------------------------------
-Hot Soup Processor ver3.21a                         HSP : Hot Soup Processor  
+Hot Soup Processor ver3.22                          HSP : Hot Soup Processor  
 更新履歴                              copyright 1997-2010 (c) onion software  
 ------------------------------------------------------------------------------
 
 ・hsp3関連 更新履歴
+
+	2010/10/18 3.22
+
+	ue_daiさんによるOpenHSPバグ修正を反映
+	　BT#169: スクリプトエディタの外部ツールの引数が終了時に変更される
+	　BT#218: ブレースの対応がチェックされない
+	　BT#224: logmesを含む場合にメッセージ割り込み処理が期待通りに動作しない
+	　BT#226: #func定義がモジュールで閉じていない
+	　BT#229: 予約キーワードとして__line__、__file__を追加
+	　BT#231: mref命令によるstatクローンのサイズが異常
+	　BT#233: sortvalでエラーが出る
+	　BT#235: 特殊展開マクロで落ちることがある
+
+	cvsmooth命令でメモリリークが発生する不具合を修正
+	USBIO制御モジュール(mod_usbio.as)を更新
+	HIDaspxに対応、制御用DLL(hidmon.dll)及びサンプルを同梱
+
+	2010/06/27 3.21a2
+
+	ファイル選択ダイアログ呼び出し時にエラーが出ることがある不具合を修正
 
 	2010/04/30 3.21a
 
