--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,10 +5,13 @@ Hot Soup Processor ver3.3                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2011/01/05 3.3β1
+	2011/01/06 3.3β1
 
-	未初期化の変数をコンパイルレポートに出力するように修正
+	未初期化の変数参照をコンパイルレポートに出力するように修正
 	#cmpopt命令にvarinitオプションを追加
+	objprmでのmesboxの内容の変化が変数に反映されない不具合を修正(BT#227)
+	HSP assistantを最小化状態で終了させると次回起動時に表示されない不具合を修正(BT#228)
+	複数行文字列を使うとエラー発生時の報告される行の位置がずれる不具合を修正(BT#234)
 
 	2010/10/18 3.22
 
