--- a/trunk/package/win32/doclib/history.txt
+++ b/trunk/package/win32/doclib/history.txt
@@ -5,13 +5,14 @@ Hot Soup Processor ver3.3                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2011/01/07 3.3β1
+	2011/01/13 3.3β1
 
 	未初期化の変数参照をコンパイルレポートに出力するように修正
 	#cmpopt命令にvarinitオプションを追加
 	objprmでのmesboxの内容の変化が変数に反映されない不具合を修正(BT#227)
 	HSP assistantを最小化状態で終了させると次回起動時に表示されない不具合を修正(BT#228)
 	複数行文字列を使うとエラー発生時の報告される行の位置がずれる不具合を修正(BT#234)
+	HSP3.22付属のexe,dllが一部Windows9xで動作しなくなっていたのを修正
 	HSPスクリプトエディタの更新
 	　・Footy2エンジンによる実装に置き換え
 	　・デフォルトのフォントをMSゴシックに変更
@@ -19,6 +20,8 @@ Hot Soup Processor ver3.3                           HSP : Hot Soup Processor
 	　・「カーソル」メニューを「編集」メニューに統合
 	　・起動時にHSPアシスタントを自動起動するオプションを追加
 	　・設定保存先レジストリ、iniファイル名を変更
+	　・キーワード色付けの変更
+	　・hspdef.asで定義されるマクロを色付けされるように修正
 
 	2010/10/18 3.22
 
