--- a/trunk/package/win32/doclib/history.txt
+++ b/trunk/package/win32/doclib/history.txt
@@ -5,6 +5,11 @@ Hot Soup Processor ver3.3                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2011/01/17 3.3β2
+
+	中間コードに最適化用のフラグを追加(3.3β1の上位互換)
+	hspdaプラグインのsortval命令でフリーズすることがある不具合を修正
+
 	2011/01/13 3.3β1
 
 	未初期化の変数参照をコンパイルレポートに出力するように修正
