--- a/trunk/package/win32/doclib/history.txt
+++ b/trunk/package/win32/doclib/history.txt
@@ -5,10 +5,14 @@ Hot Soup Processor ver3.3                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2011/01/17 3.3β2
+	2011/04/21 3.3β2
 
 	中間コードに最適化用のフラグを追加(3.3β1の上位互換)
-	hspdaプラグインのsortval命令でフリーズすることがある不具合を修正
+	hspdaプラグインのsortval命令でフリーズすることがある不具合を修正(BT#233)	一部のプラグインがWindows9xで動作しない不具合を修正
+	[スクリプトエディタ] 作成途中のスクリプトがファイル読み込みで上書きされる不具合を修正 (BT#239)
+	[スクリプトエディタ] 行番号やURL上でマウスカーソルが消える不具合を修正
+	[スクリプトエディタ] HSPメニューのDEBUGウインドゥ表示チェックが表示されない不具合を修正
+	[スクリプトエディタ] 行間の広さオプションが設定できなかった不具合を修正
 
 	2011/01/13 3.3β1
 
