--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -14,6 +14,7 @@ Hot Soup Processor ver3.3                           HSP : Hot Soup Processor
 	[スクリプトエディタ] HSPメニューのDEBUGウインドゥ表示チェックが表示されない不具合を修正
 	[スクリプトエディタ] 行間の広さオプションが設定できなかった不具合を修正
 	マクロ__line__が正常に動作しない不具合を修正(#BT238)
+	マクロpowfを標準数学関数に置き換え
 
 	2011/01/13 3.3β1
 
