--- a/trunk/package/win32/doclib/history.txt
+++ b/trunk/package/win32/doclib/history.txt
@@ -5,6 +5,14 @@ Hot Soup Processor ver3.3                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2011/06/23 3.3β3
+
+	HSPDishランタイム(Windows)を同梱
+	単項のマイナス値がパラメーター最適化で不正コードとして出力されることがある不具合を修正
+	instr関数のp2パラメーター(インデックス)にマイナス値を指定した場合、-1を返す仕様に修正
+	[HGIMG3] objgetfv命令で配列の情報が正しく設定されないことがある不具合を修正
+	[スクリプトエディタ] 行間マージンのデフォルト値を2に変更
+
 	2011/05/10 3.3β2
 
 	中間コードに最適化用のフラグを追加(3.3β1の上位互換)
