--- a/trunk/package/win32/doclib/history.txt
+++ b/trunk/package/win32/doclib/history.txt
@@ -10,6 +10,7 @@ Hot Soup Processor ver3.3                           HSP : Hot Soup Processor
 	HSPDishランタイム(Windows)を同梱
 	単項のマイナス値がパラメーター最適化で不正コードとして出力されることがある不具合を修正
 	instr関数のp2パラメーター(インデックス)にマイナス値を指定した場合、-1を返す仕様に修正
+	かんたん入力でシステム変数を取得する際にエラーが出力される不具合を修正
 	[HGIMG3] objgetfv命令で配列の情報が正しく設定されないことがある不具合を修正
 	[スクリプトエディタ] 行間マージンのデフォルト値を2に変更
 
