HSP3.3RC1向けの修正

--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,6 +5,13 @@ Hot Soup Processor ver3.3                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2011/07/25 3.3RC1
+
+	HSPアシスタントの初回起動時にメッセージを表示するように修正
+	HSP3ソースコンバーター(hsp3cnv)を同梱
+	セキュリティ対策のためDPM暗号化のアルゴリズムを微調整
+	[スクリプトエディタ] ツールメニュー「指定フォルダからDPM作成」を追加
+	[スクリプトエディタ] ツールメニュー「指定ファイルをCソースに変換」を追加
 	2011/07/07 3.3β3
 
 	HSPDishランタイム(Windows)を同梱
