スクリプトエディタ関連の修正

--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,6 +5,11 @@ Hot Soup Processor ver3.3                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2011/09/12 3.3
+
+	[スクリプトエディタ] URL,メールアドレスの表示色を標準テキストと同じになるように修正
+	[スクリプトエディタ] オートインデントの設定が反映されなかった不具合を修正
+
 	2011/07/27 3.3RC1
 
 	HSPアシスタントの初回起動時にメッセージを表示するように修正
