--- a/trunk/package/win32/doclib/history.txt
+++ b/trunk/package/win32/doclib/history.txt
@@ -5,10 +5,12 @@ Hot Soup Processor ver3.3                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2011/09/12 3.3
+	2011/09/13 3.3
 
 	[スクリプトエディタ] URL,メールアドレスの表示色を標準テキストと同じになるように修正
 	[スクリプトエディタ] オートインデントの設定が反映されなかった不具合を修正
+	HSP3ソースコンバーター(hsp3cnv)の修正
+	ドキュメントの微調整
 
 	2011/07/27 3.3RC1
 
