--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,6 +5,10 @@ Hot Soup Processor ver3.3                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2011/09/27 3.3a
+
+	HSPDishランタイム(Windows)のcelput命令で中心座標がずれる不具合を修正
+
 	2011/09/13 3.3
 
 	[スクリプトエディタ] URL,メールアドレスの表示色を標準テキストと同じになるように修正
