cnvstow命令でバッファオーバーフローが発生することがある不具合を修正(BT#245)

--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,8 +5,9 @@ Hot Soup Processor ver3.31                          HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2012/05/29 3.31β1
+	2012/06/01 3.31β1
 
+	cnvstow命令でバッファオーバーフローが発生することがある不具合を修正(BT#245)
 	指定した文字列の置換を行なうstrrep命令を追加
 	変数名として認識する文字列のオーバーフロー時にフリーズする不具合を修正(BT#256)
 	[hspinet] netgetv命令によるバイナリデータの取得に対応(BT#240)
