--- a/trunk/package/win32/doclib/history.txt
+++ b/trunk/package/win32/doclib/history.txt
@@ -5,8 +5,10 @@ Hot Soup Processor ver3.31                          HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2012/06/01 3.31β1
+	2012/06/13 3.31β1
 
+	読み込み可能な画像フォーマットにPNG、TGA、PSD形式を追加
+	await命令の時間待ちを高精度タイマーによる処理に変更
 	cnvstow命令でバッファオーバーフローが発生することがある不具合を修正(BT#245)
 	指定した文字列の置換を行なうstrrep命令を追加
 	変数名として認識する文字列のオーバーフロー時にフリーズする不具合を修正(BT#256)
