--- a/trunk/package/win32/doclib/history.txt
+++ b/trunk/package/win32/doclib/history.txt
@@ -11,6 +11,7 @@ Hot Soup Processor ver3.31                          HSP : Hot Soup Processor
 	strrep命令の検索文字列が全角文字で始まっている場合に正しく検索されない不具合を修正
 	新規対応フォーマット画像が画面サイズより大きい場合エラーになる不具合を修正
 	picload命令にモード2のオプションを追加
+	[HSP3Dish] button命令のサポートを追加
 
 	2012/06/14 3.31β1
 
