--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,13 +5,16 @@ Hot Soup Processor ver3.31                          HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2012/06/20 3.31β2
+	2012/06/25 3.31β2
 
 	β1でCOM関連機能が正しく動作しないことがあった不具合を修正
 	strrep命令の検索文字列が全角文字で始まっている場合に正しく検索されない不具合を修正
 	新規対応フォーマット画像が画面サイズより大きい場合エラーになる不具合を修正
 	picload命令にモード2のオプションを追加
 	[HSP3Dish] button命令のサポートを追加
+	[HSP3Dish] iOSランタイムの画面回転サポートを追加
+	[HSP3CNV] button命令に対応
+	[hsp3rd] 最新版のテスト用ランタイムに更新
 
 	2012/06/14 3.31β1
 
