--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -11,8 +11,9 @@ Hot Soup Processor ver3.31                          HSP : Hot Soup Processor
 	strrep命令の検索文字列が全角文字で始まっている場合に正しく検索されない不具合を修正
 	新規対応フォーマット画像が画面サイズより大きい場合エラーになる不具合を修正
 	picload命令にモード2のオプションを追加
-	[HSP3Dish] button命令のサポートを追加
-	[HSP3Dish] iOSランタイムの画面回転サポートを追加
+	[HSP3Dish] button命令のサポートを追加(Windows,iOS,android)
+	[HSP3Dish][iOS] 横画面サポートを追加
+	[HSP3Dish][iOS,android] await命令の待ち時間を微調整
 	[HSP3CNV] button命令に対応
 	[hsp3rd] 最新版のテスト用ランタイムに更新
 
