--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,7 +5,7 @@ Hot Soup Processor ver3.31                          HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2012/06/29 3.31β2
+	2012/07/01 3.31β2
 
 	β1でCOM関連機能が正しく動作しないことがあった不具合を修正
 	strrep命令の検索文字列が全角文字で始まっている場合に正しく検索されない不具合を修正
@@ -23,6 +23,7 @@ Hot Soup Processor ver3.31                          HSP : Hot Soup Processor
 	[HSP3Dish][android] end命令によるタスク終了に対応
 	[HSP3Dish][android] HSP3DHにLogcatウインドゥ表示を追加
 	[HSP3CNV] button命令に対応
+	[hsp3dh] プロジェクトフォルダがC:以外にあった場合、プロジェクト作成に失敗する不具合を修正
 	[hsp3rd] 最新版のテスト用ランタイムに更新
 
 	2012/06/14 3.31β1
