--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,6 +5,14 @@ Hot Soup Processor ver3.31                          HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2012/07/03 3.31β3
+
+	[HSP3Dish][android] 画面サイズのスケーリングに対応
+	[HSP3Dish][android] 画面復帰時にceldivの情報がリセットされる不具合を修正
+	[HSP3Dish][android] bsave命令によるストレージ保存に対応
+	[HSP3Dish][android] 安定性向上のためインスタンス破棄時の処理を修正
+	[HSP3Dish][android] HSP3DHのID指定をデフォルトで不要に修正
+
 	2012/07/01 3.31β2
 
 	β1でCOM関連機能が正しく動作しないことがあった不具合を修正
