--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,13 +5,15 @@ Hot Soup Processor ver3.31                          HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2012/07/06 3.31RC1
+	2012/07/10 3.31RC1
 
 	hsptvディレクトリに自由に使用できる素材ファイルを追加
 	hsptvディレクトリを示すシステムマクロ、dir_tvを追加(dirinfo命令も修正)
 	#pack、#epack命令のファイルをhsptvディレクトリ内も検索するように修正
 	[hspda] sortval命令でソートが正しく動作しない場合がある不具合を修正(BT#244)
 	[hspinet] ftpopen命令にPASSIVEモード接続のオプションを追加
+	[HSP3Dish][iOS] mes命令による文字列描画でノイズが発生する不具合を修正
+	[HSP3Dish][iOS] 文字列描画でメモリリークが発生する不具合を修正
 	[HSP3Dish][android,iOS] 画面サイズのスケーリングに対応
 	[HSP3Dish][android] HSP3DHによるリリースビルドに対応
 	[HSP3Dish][android] 画面復帰時にceldivの情報がリセットされる不具合を修正
