--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,8 +5,9 @@ Hot Soup Processor ver3.31                          HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2012/07/10 3.31RC1
+	2012/07/11 3.31RC1
 
+	wait,await実行中にウインドウ応答がなくなる不具合を修正
 	hsptvディレクトリに自由に使用できる素材ファイルを追加
 	hsptvディレクトリを示すシステムマクロ、dir_tvを追加(dirinfo命令も修正)
 	#pack、#epack命令のファイルをhsptvディレクトリ内も検索するように修正
