--- a/trunk/package/win32/doclib/history.txt
+++ b/trunk/package/win32/doclib/history.txt
@@ -5,10 +5,13 @@ Hot Soup Processor ver3.31                          HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2012/09/02 3.31
+	2012/09/05 3.31
 
 	[HSP3Dish] アクティブなウインドウID取得(ginfo_act)のサポートを追加(Windows)
 	[HSP3Dish][iOS] getkey命令が正しく取得できない不具合を修正
+	[HGIMG3] objshadowサンプルが正しく動作しなかったのを修正
+	HSP3Dishの特殊命令(setreq,getreq,gfilter)をヘルプに追加
+	hsed3le,hsed3f1のバージョンを3.31に統一
 	ドキュメントの微修正
 
 	2012/07/13 3.31RC1
