--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,6 +5,12 @@ Hot Soup Processor ver3.32beta                      HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2012/12/25 3.32β3
+
+	β2のウインドウ終了処理不具合をさらに修正
+	[HGIMG3] ogg再生時のDirectSoundソフトウェアバッファを使用スイッチを追加
+	[HGIMG3] ogg再生時のストリームバッファサイズ設定を追加
+
 	2012/12/18 3.32β2
 
 	onexit gosubによるウインドウ終了処理で正しく終了しない不具合を修正
