クリーンアップモジュール中でend命令を実行した際にエラーとなる不具合を修正

--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,9 +5,10 @@ Hot Soup Processor ver3.32                          HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2013/02/26 3.32a
+	2013/03/01 3.32a
 
 	プロセスが残ることがあった終了処理を再度修正
+	クリーンアップモジュール中でend命令を実行した際にエラーとなる不具合を修正
 
 	2013/02/18 3.32
 
