スクリプト中の全角スペースをスペース・タブと同様に無視するように修正 スクリプト中の全角スペースを無視する設定スイッチを#cmpoptに追加 setease命令、getease、geteasef関数のヘルプを追加
Former-commit-id: 8635cfe8e0b851097271cef2203301062e69f97f

--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,8 +5,10 @@ Hot Soup Processor ver3.4                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2014/03/26 3.4β4
+	2014/04/22 3.4β4
 
+	スクリプト中の全角スペースをスペース・タブと同様に無視するように修正
+	スクリプト中の全角スペースを無視する設定スイッチを#cmpoptに追加
 	オブジェクトファイルに不要な行番号情報が出力されないように修正
 	デバッグ時のオブジェクトファイルにラベル名と引数名を記録するように修正(fujidig)
 	イージング制御のための、setease命令、getease、geteasef関数を標準で追加
