hsp3cnvの修正 hsp3dhの更新 hsp3dish(Windows)のプラグイン・DLLサポートを追加
Former-commit-id: 3b7a4537810588e5ba5bdecbd66f3c00a9dd8267

--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -1,18 +1,21 @@
 ------------------------------------------------------------------------------
-Hot Soup Processor ver3.4                           HSP : Hot Soup Processor  
-更新履歴                              copyright 1997-2014 (c) onion software  
+Hot Soup Processor ver3.5                           HSP : Hot Soup Processor  
+更新履歴                              copyright 1997-2015 (c) onion software  
 ------------------------------------------------------------------------------
 
 ・hsp3関連 更新履歴
 
-	2015/01/29 3.5 beta1
+	2015/02/04 3.5 beta1
 
 	64bit(x64)版ランタイム、hsp3_64を追加
 	HSP3Dishのnote系命令で行数を間違える不具合を修正
 	新規プリプロセッサ命令、#bootoptを追加
 	#bootopt命令によるタイマー精度の設定変更に対応
+	[HSP3Dish][iOS] 最新のiOS及び64bitバイナリのビルド(arm64)に対応
 	[HSP3Dish][android] NDK r10、AdMobの更新に対応
+	[HSP3Dish][android] hsp3dish.iniの設定取り込みに対応
 	[HSP3Dish][android] HSP3Dish Helperの更新
+	[HSP3Dish][Windows] (Windows版のみ)プラグイン・外部DLL使用を可能に修正
 
 	2014/09/19 3.4(rc2)
 
