ue_daiさんによるOpenHSPバグ修正を反映
Former-commit-id: 3f9caba8aacc0e01f26c4d3134bd64e37cfbe6a4

--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,6 +5,25 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2015/09/21 3.5 beta3
+
+	オフィシャル珠音2D素材(tamadot)を同梱
+
+	ue_daiさんによるOpenHSPバグ修正を反映
+	[hsp3] 連想配列型のarray/local引数エイリアスを添字をつけずに参照したときに落ちるバグを修正
+	[hsp3] ユーザー定義命令/関数でのラベル引数の実装
+	[hsp3] sortstrのバグ修正およびsort系命令の高速化
+	[hspcmp] hsc3_messizeのバッファサイズ取得の修正
+	[hspcmp] マクロタグの名前を最大56文字にする
+	[hspcmp] プリプロセスで「{」「}」を文の区切り記号として解釈するように修正
+	[hspcmp] #constの後に「double」「int」の型を指定できるように修正
+	[hspcmp] #funcで宣言されたDLL関数を、関数としても使用できるように修正
+	[hspcmp] モジュール内でlocal指定された関数を、定義する前の行から使用できるように修正
+	[hspcmp] 未使用モジュールのコード削除が不完全だった部分を修正
+	[hspcmp] シンボルの多重定義エラーで定義された位置を出力するように修正
+	[hspcmp] よく見るエラーメッセージの日本語化
+	[hspcmp] 文字列や実数値の重複データ削減による出力サイズの最適化を実装
+
 	2015/05/27 3.5 beta2
 
 	[HGIMG4] テクスチャを複数読み込んだ際にエラーが発生する不具合を修正
