Kurogomaさんによる修正を反映 DupPtrを入れ子にすると正常に動作しない問題を修正 [hsp3_64] ObjImageでランタイムがクラッシュする問題を修正 [hsp3_64] リストボックス、コンボボックスが正常に動作しない問題を修正 [hsp3_64] DLL呼び出し時にパラメータが正常に渡らない問題を修正 [hsp3_64] DLL呼び出し時にHSP例外処理が働かない問題を修正 [hsp3utf] DLL呼び出し時にランタイムがクラッシュする問題を修正
Former-commit-id: e5d13adfc1342d2ddf2c3ac1b6af798fb292aff5

--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,6 +5,15 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2016/09/02 3.5 beta5
+
+	DupPtrを入れ子にすると正常に動作しない問題を修正
+	[hsp3_64] ObjImageでランタイムがクラッシュする問題を修正
+	[hsp3_64] リストボックス、コンボボックスが正常に動作しない問題を修正
+	[hsp3_64] DLL呼び出し時にパラメータが正常に渡らない問題を修正
+	[hsp3_64] DLL呼び出し時にHSP例外処理が働かない問題を修正
+	[hsp3utf] DLL呼び出し時にランタイムがクラッシュする問題を修正
+
 	2016/08/08 3.5 beta4a
 
 	外部DLLに渡すwstr,sptr型のパラメーターが正しく動作していない不具合を修正	β4版でoncmd命令が正しく使用できない不具合を修正
