β4でDLL関数名が見つからない時に落ちる不具合を修正 print命令で第2パラメーターに1を指定した場合、改行しない機能を追加
Former-commit-id: b99065449d5123b8598a63297d347637ae2c15b4

--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -9,7 +9,7 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 
 	[HSP3Dish][android] hsp3dhで長いソースのビルド時にエラーが発生する不具合を修正
 	β4版でDLL呼び出しエラーが起動時にチェックされていた不具合を修正
-	hsp3clのprint命令で第2パラメーターに1を指定した場合、改行コードを出力しないように修正
+	print命令で第2パラメーターに1を指定した場合、改行しない機能を追加
 	DupPtrを入れ子にすると正常に動作しない問題を修正
 	[hsp3_64] ObjImageでランタイムがクラッシュする問題を修正
 	[hsp3_64] リストボックス、コンボボックスが正常に動作しない問題を修正
